--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     <h2 class="section-title">Perfil</h2>
 
                     <p class="profile__description">
-                        Sou amante e entusiasta de tecnologia e trabalhar com ela me da a sensação de que estou no caminho certo, o que me deixa muito feliz e empolgado para os desafios que o me aguardam no futuro. 
+                        Sou amante e entusiasta de tecnologia e trabalhar com ela me da a sensação de que estou no caminho certo, o que me deixa muito feliz e empolgado para os desafios que o me aguardam. 
                         <br>
                         <br>
                         <br>
