--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                                 <span class="languages__circle"></span>Português | Nativo
                             </li>
                             <li class="languages__name">
-                                <span class="languages__circle"></span>Inglês | Avançado
+                                <span class="languages__circle"></span>Inglês | Intermediário
                             </li>
                             <li class="languages__name">
                                 <span class="languages__circle"></span>Espanhol | Básico
